Fixed Banner Overflow issues

--- a/styles/components.scss
+++ b/styles/components.scss
@@ -8,7 +8,7 @@
 }
 
 .section_description {
-  @apply pb-5 text-gray-700 font-normal text-justify;
+  @apply pb-5 text-gray-800 font-normal text-justify;
 }
 
 // container
